♻️Refactor: (controller)